packages/typ/tests/fixtures/diagnostics/0491_modules_opaque_operator_mismatch_07.ml
let ( + ) (x : int) (y : int) : int = x

module type S_eta = sig
  type t
  val x : t
end

module Impl_eta = struct
  type t = int
  let x = 6
end

module Hidden_eta : S_eta = Impl_eta
let _ = Hidden_eta.x + 7
